vote-service.yml
apiVersion: v1 
kind: Service
metadata:
  name: vote
spec:
  type: ClusterIP
  selector:
    app: vote
  ports:
  - port: 80
    targetPort: 80
