ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: voting.local
    http:
      paths:
      - path: /(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: vote
            port:
              number: 80
      - path: /result(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: result
            port:
              number: 80
